# audiorecorder

./: BUILDING.md  LICENSE  README.md
src/: .clang-tidy  CMakeLists.txt  args.cpp  args.h  capture.cpp  capture.h  cf_util.h  config.h.in  device.cpp  device.h  display.cpp  display.h  extend_caf.cpp  extend_caf.h  file_util.cpp  file_util.h  main.cpp  monitor.cpp  monitor.h  output_file.cpp  output_file.h  recording_context.h  ring_buffer.h  session.cpp  session.h  signal_handler.cpp  signal_handler.h  sleep_guard.h  util.h  writer.cpp  writer.h
src/cmake/: GitVersion.cmake  WriteGitHash.cmake
